# GooseMPL

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  DEVELOP.md  README.md  README_dev.md  environment.yaml  pyproject.toml  requirements.txt  setup.py  t.py
.github/workflows/: ci.yml  pythonpublish.yml
GooseMPL/: __init__.py
docs/: conf.py  develop.rst  goosempl.rst  index.rst  requirements.txt  style.rst  tips.rst
docs/examples/goosempl/: fit_linear.py  fit_powerlaw.py  fit_powerlaw_yerr.py  histogram.py  histogram_powerlaw.py  histogram_powerlaw_cppmat.py  histrogram_powerlaw.py  patch.py  random_from_cdf.py  readme.rst  ticks.py  ticks_log.py  write_data.py
docs/examples/pyplot/: colorbar.py  colormap-part.py  colormap.py  image.py  image_subplots.py  image_subplots_bottom.py  image_subplots_grid.py  legend.py  legend_background.py  legend_external.py  multicolor.py  plot-cmap.py  plot-cycler.py  plot.py  readme.rst  subplot.py  tick-formatter.py  tick-log.py  tick-log_1.py  tick-log_2.py  tick-position.py  tick-rotation-log.py
examples/: image.py  image_subplots.py  plot-cmap.py  plot-patch.py  plot.py  subplot.py
goosempl/: __init__.py  goosempl.py
goosempl/stylelib/: goose-latex.mplstyle  goose-tick-lower.mplstyle
pyplot_ext/: __init__.py  pyplot_ext.py
stylelib/: goose-latex.mplstyle  goose-tick-in.mplstyle  goose.mplstyle  goose_latex.mplstyle
test/: main.py
tests/: test_main.py
