[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["deprecation", "matplotlib", "numpy", "pyyaml", "scipy"]
description = "Style and extension functions for matplotlib"
dynamic = ["version"]
name = "GooseMPL"
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
Source = "https://github.com/tdegeus/GooseMPL"

[tool.setuptools_scm]
write_to = "GooseMPL/_version.py"
